--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -22,6 +22,17 @@
   font-size: large;
 }
 
+.user-box{
+  height: 20vh;
+  width: 20vw;
+  border: black solid 1px;
+  margin: 15px;
+}
+
+.screen{
+  display: flex;
+  justify-content: space-around;
+}
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
