--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -33,6 +33,23 @@
   display: flex;
   justify-content: space-around;
 }
+
+.screen input{
+  width: 100px;
+  height: 20px;
+}
+
+.user-boxes{
+  display: flex;
+  flex-wrap: wrap;
+  height: 100vh;
+  width: 60vw;
+}
+
+.text-fields{
+  display: flex;
+  flex-direction: column;
+}
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
